--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html {
 
 .body {
     max-width: 800px;
-    margin: 30px;
+    margin: 0 auto;
     font-family: "Lato", sans-serif;
     padding: 30px;
     text-align: center;
